ncc/testsuite/positive/Issue-0853.n
using System;
using System.Console;

public class A[T]
{
  public partial class B
  {
    public override ToString() : string
    {
      "First B"
    }
  }
}

public class A
{
  public partial class B[T]
  {
    public override ToString() : string
    {
      "Second B"
    }
  }
}

module Program
{
  Main() : void
  {
    def a1 = A.[int].B();
    WriteLine(a1);

    def a2 = A.B.[int]();
    WriteLine(a2);
  }
}
/*
BEGIN-OUTPUT
First B
Second B
END-OUTPUT
*/