ncc/testsuite/negative/void-parm.n
public class A['a]
{
}

public class B
{
    x : A[System.Void]; // E: cannot use `void' as a generic parameter
    
   public F() : void
   {
   
   }
}

module M {
  public foo (_ : void) : void // E: has void argument
  {
  }

  public bar (_ : System.Void) : void // E: has void argument
  {
  }
 
  public Main () : void // OK
  {
  }
}
